next version update

--- a/helper_scripts/templates/container.hbs
+++ b/helper_scripts/templates/container.hbs
@@ -1,5 +1,5 @@
 import { Helmet } from 'react-helmet';
-import PropTypes from 'prop-types';
+{{!-- import PropTypes from 'prop-types'; --}}
 import App from '../components/App';
 
 const Default = props => (
@@ -13,7 +13,7 @@ const Default = props => (
   </App>
 );
 
-Default.propTypes = {
+{{!-- Default.propTypes = {
   title: PropTypes.string,
   url: PropTypes.object.isRequired,
   children: PropTypes.element.isRequired
@@ -21,6 +21,6 @@ Default.propTypes = {
 
 Default.defaultProps = {
   title: ''
-};
+}; --}}
 
 export default Default;
